--- a/main.html
+++ b/main.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset = 'utf-8'>
+    <meta name='viewport' content="width=device-width, initial-scale=1.0">
     <link rel = 'stylesheet' type='text/css' href='style.css'>
-    <script src='script.js'></script>
+    <!-- <script src='script.js'></script> -->
     <link rel ='stylesheet' href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <title>베스킨라빈스</title>
@@ -60,18 +61,18 @@
              <ul>
               <li class='tit'>
                   <a href="#">
-                    <img src='img/banner_delivery.png' class='store'> <br><br>
+                    <img src='img/banner_delivery.png' class='br_event'> 
                   </a>
-                    <img src='img/stit_store.gif' width='55%'><br><br>
-                    <div class='title'> 해피 오더 딜리버리로 간편하게 주문하세요!</div> <br>
+                    <img src='img/stit_store.gif' width='55%'><br>
+                    <div class='title'> 해피 오더 딜리버리로 간편하게 주문하세요!</div> 
                     <div class='period'>상시진행</div>
                 </li>
                 <li class='tit'>
                   <a href="#">
-                    <img src='img/banner_delivery_bm.png' class='store'> <br><br>
+                    <img src='img/banner_delivery_bm.png' class='br_event'> 
                   </a>
-                    <img src='img/stit_store.gif'width='55%' ><br><br>
-                    <div class='title'>배달의 민족에서 빠르게 주문하세요!</div> <br>
+                    <img src='img/stit_store.gif'width='55%' ><br>
+                    <div class='title'>배달의 민족에서 빠르게 주문하세요!</div> 
                     <div class='period'>상시진행</div>
                 </li>   
               </ul>
@@ -83,18 +84,18 @@
              <ul>
               <li class='tit'>
                   <a href="#">
-                    <img src='img/banner_delivery_ygy.png' class='store'> <br><br>
+                    <img src='img/banner_delivery_ygy.png' class='br_event'> 
                   </a>
-                    <img src='img/stit_store.gif' width='55%'><br><br>
-                    <div class='title'> 요기요에서 손쉽게 주문하세요!</div> <br>
+                    <img src='img/stit_store.gif' width='55%'><br>
+                    <div class='title'> 요기요에서 손쉽게 주문하세요!</div> 
                     <div class='period'>상시진행</div>
               </li>
                 <li class='tit'>
                   <a href="#">
-                    <img src='img/banner_delivery_kakao.png' class='store'> <br><br>
+                    <img src='img/banner_delivery_kakao.png' class='br_event'> 
                   </a>
-                    <img src='img/stit_store.gif'width='55%' ><br><br>
-                    <div class='title'>카카오톡 주문하기에서 편리하게 주문하세요!</div> <br>
+                    <img src='img/stit_store.gif'width='55%' ><br>
+                    <div class='title'>카카오톡 주문하기에서 편리하게 주문하세요!</div> 
                     <div class='period'>상시진행</div>
                 </li>   
               </ul>
@@ -106,18 +107,18 @@
                <ul>
                 <li class='tit'>
                     <a href="#">
-                      <img src='img/banner_4.jpg' class='store'> <br><br>
+                      <img src='img/banner_4.jpg' class='br_event'> 
                     </a>
-                      <img src='img/stit_store.gif' width='55%'><br><br>
-                      <div class='title'> KT맴버쉽 고객이라면 누구나 파인트 30% 할인</div> <br>
+                      <img src='img/stit_store.gif' width='55%'><br>
+                      <div class='title'> KT맴버쉽 고객이라면 누구나 파인트 30% 할인</div> 
                       <div class='period'>상시진행</div>
                   </li>
                   <li class='tit'>
                     <a href="#">
-                      <img src='img/1578277305.png' class='store'> <br><br><br>
+                      <img src='img/1578277305.png' class='br_event'> <br>
                     </a>
-                      <img src='img/stit_store.gif' width='55%'><br><br>
-                      <div class='title'>1회용 컵 사용 줄이기 안내</div> <br>
+                      <img src='img/stit_store.gif' width='55%'>
+                      <div class='title'>1회용 컵 사용 줄이기 안내</div> 
                       <div class='period'>상시진행</div>
                  </li>
                 </ul>
@@ -129,17 +130,17 @@
               <ul>
                 <li class='tit'>
                     <a href="#">
-                      <img src='img/1570702843.png' class='store'> <br><br>
+                      <img src='img/1570702843.png' class='br_event'> 
                     </a>
-                      <img src='img/stit_store.gif' width='55%'><br><br>
-                      <div class='title'> 2018 한글날 기념 무료 글꼴 공개! 배스킨라빈스체</div> <br>
+                      <img src='img/stit_store.gif' width='55%'><br>
+                      <div class='title'> 2018 한글날 기념 무료 글꼴 공개! 배스킨라빈스체</div> 
                       <div class='period'>상시진행</div>
                   </li>
                   <li class='tit'>
                     <a href="#">
-                      <img src='img/1639297260.png' class='store'> <br><br>
+                      <img src='img/1639297260.png' class='br_event'> 
                     </a>
-                      <img src='img/stit_store.gif'width='55%' ><br><br>
+                      <img src='img/stit_store.gif'width='55%' ><br>
                       <div class='title'>제휴 할인 카드 혜택 안내</div> <br>
                       <div class='period'>상시진행</div>
                   </li>   
@@ -152,17 +153,17 @@
               <ul>
                 <li class='tit'>
                     <a href="#">
-                      <img src='img/banner_praise_2021-2.png' class='store'> <br><br>
+                      <img src='img/banner_praise_2021-2.png' class='br_event'> 
                     </a>
-                      <img src='img/stit_store.gif' width='55%'><br><br>
-                      <div class='title'> 2021년 2분기 고객 BEST 칭찬 점포 안내</div> <br>
+                      <img src='img/stit_store.gif' width='55%'><br>
+                      <div class='title'> 2021년 2분기 고객 BEST 칭찬 점포 안내</div> 
                   </li>
                 </ul>
               </nav>
             </div>
           </div>
-          <div class="swiper-pagination"></div>
-        </div>
+          <div class="swiper-pagination"></div><br><br>
+        </div> 
           <script>
               var swiper = new Swiper(".mySwiper", {
               pagination: {
@@ -270,7 +271,7 @@
             </li>
             <li class="li_2">
               <a href="#"><img src="img/btn_ccm.gif"><br>
-               <span>Consumer<br>Centered<br>Management</span>
+               <span>Consumer Centered Management</span>
              </a>
             </li>
             <li class="li_3">
@@ -289,7 +290,7 @@
               </a>
             </li>
             <li class="li_6">
-              <a href="#"><img src="img/btn_ksa.gif">
+              <a href="#"><img src="img/btn_ksa.gif"><br>
                <span>품질경쟁력 평가시스템</span>
               </a>
             </li>
